src/components/MyReviews/MyReviews.scss
/* Entire top rated section */
.my-reviews-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

/* This is the button that is used to open and close the content */
.my-reviews {
  cursor: pointer;
  display: flex;
  align-items: center;
  border: none;
  outline: none;
  padding: 0px;
}

/* This is the list item that the user sees in the menu, it is the text only, not the button itself */
.my-reviews-title {
  font-family: "Roboto", sans-serif;
  text-align: left;
  align-items: center;
  color: #222222;
  display: flex;
  font-weight: 300;
  margin: 0px;
  margin-left: 5px;
}


/* Styles the top rated content panel. Note: hidden by default */
.my-reviews-content {
  overflow-y: scroll;
  transition: max-height 0.6s ease;
  height: 45vh;
}

.my-reviews:hover,
.active {
  color: #4775FF !important;
}

@media (min-width: 768px) {
  .my-reviews-title {
    font-size: 20px;
  }
}

@media (min-width: 350px) and (max-width: 767px) {
  .my-reviews-title {
    font-size: 18px;
  }
}

//////////////////// STYLES FOR TOP RATED CARDS

ul {
  padding: 0px
}

.address {
  font-size: 10px !important;
}
.col-7 {
  padding: 0px;
}

.bars {
  padding: 3px 0px;
}

.card-content {
  color: #222222;
  font-size: 12px;
  font-family: Roboto;
  font-weight: 300;
}

.created-at-icon {
  display: inline;
  height: 12px;
}

.plain-text {
  color: #222222;
  font-family: Roboto;
  font-size: 13px;
  font-style: normal;
  font-weight: 300;
  line-height: 150%;
}

.my-reviews-card {
  border: 1px solid #4775FF;
  border-radius: 16px;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  box-sizing: border-box;
  height: auto;
  width: 252px;
  padding: 7px 0px 7px 25px;
  margin: 10px;
}

.my-reviews-stars {
  font-size: 12px;
  color: #FFCC47;
}

.workplace-title {
  font-size: 17px;
  font-weight: 500;
  line-height: 150%;
  text-decoration: underline;
  margin-right: 5px;
}

